RESOLVED FIXED151849
REGRESSION (r187121): Can't get to the main content of the page at https://theintercept.com/drone-papers/
https://bugs.webkit.org/show_bug.cgi?id=151849
Summary REGRESSION (r187121): Can't get to the main content of the page at https://th...
Simon Fraser (smfr)
Reported 2015-12-03 21:18:53 PST
REGRESSION (r187121): Can't get to the main content of the page at https://theintercept.com/drone-papers/
Attachments
Patch (7.17 KB, patch)
2015-12-03 21:22 PST, Simon Fraser (smfr)
no flags
Archive of layout-test-results from ews103 for mac-yosemite (879.57 KB, application/zip)
2015-12-03 22:17 PST, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-yosemite-wk2 (782.32 KB, application/zip)
2015-12-03 22:21 PST, Build Bot
no flags
Archive of layout-test-results from ews113 for mac-yosemite (858.29 KB, application/zip)
2015-12-03 22:27 PST, Build Bot
no flags
Patch (8.12 KB, patch)
2015-12-04 21:10 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2015-12-03 21:22:09 PST
Simon Fraser (smfr)
Comment 2 2015-12-03 21:22:34 PST
Build Bot
Comment 3 2015-12-03 22:17:49 PST
Comment on attachment 266597 [details] Patch Attachment 266597 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/514083 New failing tests: imported/blink/transitions/transition-not-interpolable.html
Build Bot
Comment 4 2015-12-03 22:17:52 PST
Created attachment 266600 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5 2015-12-03 22:21:55 PST
Comment on attachment 266597 [details] Patch Attachment 266597 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/514085 New failing tests: imported/blink/transitions/transition-not-interpolable.html
Build Bot
Comment 6 2015-12-03 22:21:58 PST
Created attachment 266601 [details] Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 7 2015-12-03 22:26:58 PST
Comment on attachment 266597 [details] Patch Attachment 266597 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/514089 New failing tests: imported/blink/transitions/transition-not-interpolable.html
Build Bot
Comment 8 2015-12-03 22:27:01 PST
Created attachment 266602 [details] Archive of layout-test-results from ews113 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-yosemite Platform: Mac OS X 10.10.5
Simon Fraser (smfr)
Comment 9 2015-12-04 21:10:48 PST
WebKit Commit Bot
Comment 10 2015-12-06 21:14:49 PST
Comment on attachment 266703 [details] Patch Clearing flags on attachment: 266703 Committed r193610: <http://trac.webkit.org/changeset/193610>
WebKit Commit Bot
Comment 11 2015-12-06 21:14:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.